[package]
name = "wasm-sqlite"
version = "0.1.0-alpha.2"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# optimize for small code size
[profile.release]
opt-level = "s"
lto = true

[dependencies]
rusqlite = { version = "0.26", features = ["bundled", "serde_json"] }
sqlite-vfs = { git = "https://github.com/rkusa/sqlite-vfs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
rusqlite = { version = "0.26", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
libsqlite3-sys = { version = "0.23", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
