[package]
name = "wasm-sqlite"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# optimize for small code size
[profile.release]
opt-level = "s"
lto = true

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
rusqlite = { version = "0.26", features = ["bundled", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite-vfs = "0.2"

[patch.crates-io]
rusqlite = { version = "0.26", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
libsqlite3-sys = { version = "0.23", git = "https://github.com/rkusa/rusqlite.git", branch = "wasi" }
